--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "typescript-train",
   "version": "0.1.0",
+  "homepage": "https://Kuldik.github.io/typescript-train",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
